fix types and spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,14 +1,10 @@
-.container {
-  padding: 0 2rem;
-}
-
 .dialogueContainer {
   display: flex;
   flex-direction: column;
   width: 60%;
   min-width: 340px;
   position: absolute;
-  bottom: 100px;
+  bottom: 50px;
 }
 
 .dialogueBox {
@@ -159,11 +155,11 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  /* padding: 4rem 0; */
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
@@ -198,17 +194,6 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
 }
 
 .code {
